--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,7 +5,7 @@
 
     <!-- Public plugin name should be written in Title Case.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
-    <name><![CDATA[Idea-Plugin-Development-Learning]]></name>
+    <name>Idea-Plugin-Development-Learning</name>
 
     <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
     <vendor email="support@mclebtec.com" url="https://www.mclebtec.com">McLebTec</vendor>
@@ -30,4 +30,8 @@
     <extensions defaultExtensionNs="com.intellij">
 
     </extensions>
+
+    <actions>
+
+    </actions>
 </idea-plugin>
