--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -28,7 +28,7 @@
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-
+       <applicationService serviceImplementation="com.mclebtec.ideaplugindevelopmentlearning.action.DataSettings"/>
     </extensions>
 
     <actions>
